@@ -53,3 +53,6 @@ Revert levelpscost branching
 No restarts
 Heuristics and branching statistics at the end
 --- 5 jan full ---
+Turn off non performing heuristics after index 25
+--- 6 jan full ---
+Max restarts as parameter 0,1
